--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-My name Ike
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>website</title>
+</head>
+<body>
+    <header>
+        <h1>Welcome to website</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="research.html">Research</a></li>
+                <li><a href="climbing.html">Climbing</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h2>Homepage Content</h2>
+        <p>Welcome to website! This is the homepage.</p>
+    </main>
+    <footer>
+        <p>&copy; 2024 website</p>
+    </footer>
+</body>
+</html>
