--- a/climbing.html
+++ b/climbing.html
@@ -10,9 +10,9 @@
         <h1>Climbing</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="research.html">Research</a></li>
-                <li><a href="climbing.html">Climbing</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./research.html">Research</a></li>
+                <li><a href="./climbing.html">Climbing</a></li>
             </ul>
         </nav>
     </header>
