--- a/climbing.html
+++ b/climbing.html
@@ -1,27 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
+<html style="background-color:#ffffff;">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Climbing</title>
+<meta name="description" content="Climbing - Ike Griss Salas">
+<title>Climbing - Ike Griss Salas</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<link rel=StyleSheet href="ike_styles.css" type="text/css" media=all>
 </head>
-<body>
-    <header>
-        <h1>Climbing</h1>
-        <nav>
-            <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./research.html">Research</a></li>
-                <li><a href="./climbing.html">Climbing</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <h2>Climbing Content</h2>
-        <p>Information about climbing will be here.</p>
-    </main>
-    <footer>
-        <p>&copy; 2024 website</p>
-    </footer>
+<body style="margin-top: 0px; width: 50%;">
+
+   <div id="outer">
+   <div id="menu" style="width:80%; ">
+    <!-- HINT: Set the class of any menu link below to "active" to make it appear active -->
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="./research.html">Research</a></li>
+      <li><a href="./climbing.html" class="active">Climbing</a></li>
+    </ul>
+  </div>
+  </div>
+
+	<center><table width=80% border=0 cellspacing="3" cellpadding="3">
+	<tr>
+
+		<td align="center" bgcolor="white">
+      <h1 style="font-size:50px; font-weight:normal;">Climbing</h1>
+	  </p>
+
+   </td>
+	</tr>
+
+
+   </table></center>
+
+	<center><table width=80% border=0 cellspacing="1" cellpadding="1">
+
+   </table></center>
+
 </body>
+
 </html>
