--- a/index.html
+++ b/index.html
@@ -1,27 +1,68 @@
-<!DOCTYPE html>
-<html lang="en">
+<html style="background-color:#ffffff;">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>website</title>
+<head>
+<meta name="description" content="Ike Griss Salas">
+<title>Ike Griss Salas</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<link rel=StyleSheet href="ike_styles.css" type="text/css" media=all>
 </head>
-<body>
-    <header>
-        <h1>Welcome to website</h1>
-        <nav>
-            <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./research.html">Research</a></li>
-                <li><a href="./climbing.html">Climbing</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <h2>Homepage Content</h2>
-        <p>Welcome to website! This is the homepage.</p>
-    </main>
-    <footer>
-        <p>&copy; 2024 website</p>
-    </footer>
+<body style="margin-top: 0px; width: 50%;">
+
+   <div id="outer">
+   <div id="menu" style="width:80%; ">
+    <!-- HINT: Set the class of any menu link below to "active" to make it appear active -->
+    <ul>
+      <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="./research.html">Research</a></li>
+      <li><a href="./climbing.html">Climbing</a></li>
+    </ul>
+  </div>
+  </div>
+
+	<center><table width=80% border=0 cellspacing="3" cellpadding="3">
+	<tr>
+
+		<td align="center" bgcolor="white">
+      <h1 style="font-size:50px; font-weight:normal;">Ike Griss Salas</h1>
+      <p style="font-size:20px;">Email: <a href="mailto://grisal@uw.edu">grisal@uw.edu</a><br>
+	  <!-- <a href="https://scholar.google.com/citations?user=-varfsgAAAAJ&hl=en">Google Scholar</a><br> -->
+	  <a href="https://github.com/malachitewind">Github</a>
+	  </p>
+
+   </td>
+	</tr>
+
+
+   </table></center>
+
+	<center><table width=80% border=0 cellspacing="1" cellpadding="1">
+	<tr>
+	<td align="left" bgcolor="white" style="width:300px;">
+	  <img src="./department_2.jpeg" style="width: 85%;">
+    </td>
+	<td align="left" bgcolor="white">
+		<p style="padding-left:30px;">
+
+    I'm a Ph.D. candidate in <a href="https://amath.washington.edu/">Applied Mathematics</a> at the University of Washington, advised by <a href="https://faculty.washington.edu/kutz/">Nathan Kutz</a>. I work on creating reduced order models for characterizing plume dynamics. 
+
+		</p>
+    </td>
+	</tr>
+
+   </table></center>
+	<center><table width=80% border=0 cellspacing="1" cellpadding="1">
+
+	<tr>
+	<td align="left" bgcolor="white">
+		<p style="padding-left:30px;">
+
+		</p>
+    </td>
+	</tr>
+
+   </table></center>
+
 </body>
+
 </html>
