bug: double head

--- a/climbing.html
+++ b/climbing.html
@@ -4,7 +4,7 @@
 <title>Climbing - Ike Griss Salas</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<link rel=StyleSheet href="ike_styles.css" type="text/css" media=all>
+<link rel="stylesheet" href="ike_styles.css" type="text/css" media="all">
 </head>
 <body style="margin-top: 0px; width: 50%;">
 
@@ -19,23 +19,16 @@
   </div>
   </div>
 
-	<center><table width=80% border=0 cellspacing="3" cellpadding="3">
-	<tr>
-
-		<td align="center" bgcolor="white">
+  <center><table width="80%" border="0" cellspacing="3" cellpadding="3">
+  <tr>
+    <td align="center" bgcolor="white">
       <h1 style="font-size:50px; font-weight:normal;">Climbing</h1>
-	  </p>
+    </td>
+  </tr>
+  </table></center>
 
-   </td>
-	</tr>
-
-
-   </table></center>
-
-	<center><table width=80% border=0 cellspacing="1" cellpadding="1">
-
-   </table></center>
+  <center><table width="80%" border="0" cellspacing="1" cellpadding="1">
+  </table></center>
 
 </body>
-
 </html>
