--- a/research.html
+++ b/research.html
@@ -4,32 +4,30 @@
 <title>Research - Ike Griss Salas</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<link rel=StyleSheet href="ike_styles.css" type="text/css" media=all>
+<link rel="stylesheet" href="ike_styles.css" type="text/css" media="all">
 </head>
 <body style="margin-top: 0px; width: 50%;">
 
-   <div id="outer">
-   <div id="menu" style="width:80%; ">
-    <!-- HINT: Set the class of any menu link below to "active" to make it appear active -->
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="./research.html" class="active">Research</a></li>
-      <li><a href="./climbing.html">Climbing</a></li>
-    </ul>
+  <div id="outer">
+    <div id="menu" style="width:80%; ">
+      <!-- HINT: Set the class of any menu link below to "active" to make it appear active -->
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="./research.html" class="active">Research</a></li>
+        <li><a href="./climbing.html">Climbing</a></li>
+      </ul>
+    </div>
   </div>
-  </div>
 
-	<center><table width=80% border=0 cellspacing="3" cellpadding="3">
-	<tr>
-
-	    <td align="center" bgcolor="white">
-      <h1 style="font-size:50px; font-weight:normal;">Research</h1>
-
-   </td>
-	</tr>
-   </table></center>
-
+  <center>
+    <table width="80%" border="0" cellspacing="3" cellpadding="3">
+      <tr>
+        <td align="center" bgcolor="white">
+          <h1 style="font-size:50px; font-weight:normal;">Research</h1>
+        </td>
+      </tr>
+    </table>
+  </center>
 
 </body>
-
 </html>
