--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <html style="background-color:#ffffff;">
 <head>
-<head>
 <meta name="description" content="Ike Griss Salas">
 <title>Ike Griss Salas</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<link rel=StyleSheet href="ike_styles.css" type="text/css" media=all>
+<link rel="stylesheet" href="ike_styles.css" type="text/css" media="all">
 </head>
 <body style="margin-top: 0px; width: 50%;">
 
@@ -20,23 +19,21 @@
   </div>
   </div>
 
-	<center><table width=80% border=0 cellspacing="3" cellpadding="3">
+	<center><table width="80%" border="0" cellspacing="3" cellpadding="3">
 	<tr>
 
 		<td align="center" bgcolor="white">
       <h1 style="font-size:50px; font-weight:normal;">Ike Griss Salas</h1>
-      <p style="font-size:20px;">Email: <a href="mailto://grisal@uw.edu">grisal@uw.edu</a><br>
+      <p style="font-size:20px;">Email: <a href="mailto:grisal@uw.edu">grisal@uw.edu</a><br>
 	  <!-- <a href="https://scholar.google.com/citations?user=-varfsgAAAAJ&hl=en">Google Scholar</a><br> -->
 	  <a href="https://github.com/malachitewind">Github</a>
 	  </p>
 
    </td>
 	</tr>
-
-
    </table></center>
 
-	<center><table width=80% border=0 cellspacing="1" cellpadding="1">
+	<center><table width="80%" border="0" cellspacing="1" cellpadding="1">
 	<tr>
 	<td align="left" bgcolor="white" style="width:300px;">
 	  <img src="./department_2.jpeg" style="width: 85%;">
@@ -49,20 +46,4 @@
 		</p>
     </td>
 	</tr>
-
-   </table></center>
-	<center><table width=80% border=0 cellspacing="1" cellpadding="1">
-
-	<tr>
-	<td align="left" bgcolor="white">
-		<p style="padding-left:30px;">
-
-		</p>
-    </td>
-	</tr>
-
-   </table></center>
-
-</body>
-
-</html>
+   </table></center
