--- a/climbing.html
+++ b/climbing.html
@@ -9,26 +9,49 @@
 <body style="margin-top: 0px; width: 50%;">
 
    <div id="outer">
-   <div id="menu" style="width:80%; ">
+   <div id="menu" style="width:80%; margin:auto;">
     <!-- HINT: Set the class of any menu link below to "active" to make it appear active -->
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="./research.html">Research</a></li>
-      <li><a href="./climbing.html" class="active">Climbing</a></li>
+    <ul style="list-style-type:none; padding:0; text-align:center;">
+      <li style="display:inline; margin:0 10px;"><a href="index.html">Home</a></li>
+      <li style="display:inline; margin:0 10px;"><a href="./research.html">Research</a></li>
+      <li style="display:inline; margin:0 10px;"><a href="./climbing.html" class="active">Climbing</a></li>
     </ul>
   </div>
+
+  <center>
+    <table width="80%" border="0" cellspacing="3" cellpadding="3">
+      <tr>
+        <td align="center" bgcolor="white">
+          <h1 style="font-size:50px; font-weight:normal;">Climbing</h1>
+        </td>
+      </tr>
+    </table>
+  </center>
+
+  <div style="width:80%; margin:auto; text-align:center;">
+    <h2 style="font-size:30px; font-weight:normal; margin-bottom:20px;">Gallery</h2>
+
+    <!-- Gallery Section -->
+    <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px;">
+      <!-- Item 1 -->
+      <figure style="max-width:300px; text-align:center;">
+        <img src="graphics/climbing/Shangri-La_Crouching_Tiger.jpg" alt="Image description 1" style="width:100%; height:auto; border-radius:8px; box-shadow:0 4px 6px rgba(0,0,0,0.1);">
+        <figcaption style="margin-top:10px; font-size:16px; color:#555;">Shangri-La, Crouching Tiger 5.10c. September 29, 2024.</figcaption>
+      </figure>
+
+      <!-- Item 2 -->
+      <figure style="max-width:300px; text-align:center;">
+        <img src="graphics/climbing/Bills-Wall_Kissing_Cousins.jpg" alt="Image description 2" style="width:100%; height:auto; border-radius:8px; box-shadow:0 4px 6px rgba(0,0,0,0.1);">
+        <figcaption style="margin-top:10px; font-size:16px; color:#555;">Bill's Wall, Kissing Cousins 5.10b. October 26, 2024.</figcaption>
+      </figure>
+
+      <!-- Item 3 -->
+      <figure style="max-width:300px; text-align:center;">
+        <img src="graphics/climbing/Hard_rock_muffin.jpg" alt="Image description 3" style="width:100%; height:auto; border-radius:8px; box-shadow:0 4px 6px rgba(0,0,0,0.1);">
+        <figcaption style="margin-top:10px; font-size:16px; color:#555;">Hard Rock, American Fork, Tasty Muffin. September 6, 2024.</figcaption>
+      </figure>
+    </div>
   </div>
-
-  <center><table width="80%" border="0" cellspacing="3" cellpadding="3">
-  <tr>
-    <td align="center" bgcolor="white">
-      <h1 style="font-size:50px; font-weight:normal;">Climbing</h1>
-    </td>
-  </tr>
-  </table></center>
-
-  <center><table width="80%" border="0" cellspacing="1" cellpadding="1">
-  </table></center>
 
 </body>
 </html>
