--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h1 style="font-size:50px; font-weight:normal;">Ike Griss Salas</h1>
       <p style="font-size:20px;">Email: <a href="mailto:grisal@uw.edu">grisal@uw.edu</a><br>
 	  <!-- <a href="https://scholar.google.com/citations?user=-varfsgAAAAJ&hl=en">Google Scholar</a><br> -->
-	  <a href="https://github.com/malachitewind">Github</a>
+	  github: <a href="https://github.com/malachitewind">Github</a>
 	  </p>
 
    </td>
@@ -36,13 +36,12 @@
 	<center><table width="80%" border="0" cellspacing="1" cellpadding="1">
 	<tr>
 	<td align="left" bgcolor="white" style="width:300px;">
-	  <img src="./department_2.jpeg" style="width: 85%;">
+	  <img src="./graphics/department_2.jpeg" style="width: 100%;">
     </td>
 	<td align="left" bgcolor="white">
 		<p style="padding-left:30px;">
 
-    I'm a Ph.D. candidate in <a href="https://amath.washington.edu/">Applied Mathematics</a> at the University of Washington, advised by <a href="https://faculty.washington.edu/kutz/">Nathan Kutz</a>. I work on creating reduced order models for characterizing plume dynamics. 
-
+    I'm a Ph.D. student in <a href="https://amath.washington.edu/">Applied Mathematics</a> at the University of Washington, advised by <a href="https://faculty.washington.edu/kutz/">Nathan Kutz</a>. I work on creating reduced order models for characterizing plume dynamics. As well as optimization methods for model discovery from sparse data observations.
 		</p>
     </td>
 	</tr>
