--- a/climbing.html
+++ b/climbing.html
@@ -48,7 +48,7 @@
       <!-- Item 3 -->
       <figure style="max-width:300px; text-align:center;">
         <img src="graphics/climbing/Hard_rock_muffin.jpg" alt="Image description 3" style="width:100%; height:auto; border-radius:8px; box-shadow:0 4px 6px rgba(0,0,0,0.1);">
-        <figcaption style="margin-top:10px; font-size:16px; color:#555;">Hard Rock, American Fork, Tasty Muffin. September 6, 2024.</figcaption>
+        <figcaption style="margin-top:10px; font-size:16px; color:#555;">Hard Rock, American Fork, Tasty Muffins. September 6, 2024.</figcaption>
       </figure>
     </div>
   </div>
