--- a/climbing.html
+++ b/climbing.html
@@ -23,6 +23,10 @@
       <tr>
         <td align="center" bgcolor="white">
           <h1 style="font-size:50px; font-weight:normal;">Climbing</h1>
+          <p style="font-size:16px;">
+            <!-- Add a brief introduction about your research focus, areas of interest, and overarching goals. -->
+            <em> Some of my climbing.</em>
+          </p>
         </td>
       </tr>
     </table>
@@ -53,8 +57,8 @@
 
       <!-- Item 4 -->
       <figure style="max-width:300px; text-align:center;">
-        <img src="graphics/climbing/Indian_creek.JPG" alt="Image description 3" style="width:100%; height:auto; border-radius:8px; box-shadow:0 4px 6px rgba(0,0,0,0.1);">
-        <figcaption style="margin-top:10px; font-size:16px; color:#555;">Indian Creek, 2023. </figcaption>
+        <img src="graphics/climbing/Indian-creek_sparkling_gefilte_fish.jpg" alt="Image description 3" style="width:100%; height:auto; border-radius:8px; box-shadow:0 4px 6px rgba(0,0,0,0.1);">
+        <figcaption style="margin-top:10px; font-size:16px; color:#555;">Indian Creek, Sparkling Gefilte Fish 5.10c, November 8, 2022. </figcaption>
       </figure>
     </div>
   </div>
