--- a/climbing.html
+++ b/climbing.html
@@ -60,6 +60,11 @@
         <img src="graphics/climbing/Indian-creek_sparkling_gefilte_fish.jpg" alt="Image description 3" style="width:100%; height:auto; border-radius:8px; box-shadow:0 4px 6px rgba(0,0,0,0.1);">
         <figcaption style="margin-top:10px; font-size:16px; color:#555;">Indian Creek, Sparkling Gefilte Fish 5.10c, November 8, 2022. </figcaption>
       </figure>
+      <!-- Item 5 -->
+      <figure style="max-width:300px; text-align:center;">
+        <img src="graphics/climbing/lunar_ecplise.jpg" alt="Image description 3" style="width:100%; height:auto; border-radius:8px; box-shadow:0 4px 6px rgba(0,0,0,0.1);">
+        <figcaption style="margin-top:10px; font-size:16px; color:#555;">Indian Creek, Lunar Ecplise, November 8, 2022. </figcaption>
+      </figure>
     </div>
   </div>
 
