--- a/climbing.html
+++ b/climbing.html
@@ -73,12 +73,12 @@
         <!-- Item 1 (Album Cover) -->
         <figure style="max-width:300px; text-align:center;" onclick="toggleGallery('shangriLaGallery')">
           <img src="graphics/climbing/Shangri-La/Shangri-La_Crouching_Tiger.jpg" alt="Shangri-La" class="album-cover">
-          <figcaption style="margin-top:10px; font-size:16px; color:#555;">Shangri-La, Crouching Tiger 5.10c. September 29, 2024.</figcaption>
+          <figcaption style="margin-top:10px; font-size:16px; color:#555;">Shangri-La, Crouching Tiger 5.10c. September 28, 2024.</figcaption>
         </figure>
 
         <!-- Item 2 (Album Cover) -->
         <figure style="max-width:300px; text-align:center;" onclick="toggleGallery('billsWallGallery')">
-          <img src="graphics/climbing/Bills-Wall_Kissing_Cousins.jpg" alt="Bill's Wall" class="album-cover">
+          <img src="graphics/climbing/sunshine/Bills-Wall_Kissing_Cousins.jpg" alt="Bill's Wall" class="album-cover">
           <figcaption style="margin-top:10px; font-size:16px; color:#555;">Bill's Wall, Kissing Cousins 5.10b. October 26, 2024.</figcaption>
         </figure>
 
@@ -126,11 +126,15 @@
 
     <div class="hidden-gallery" id="billsWallGallery">
       <figure>
-        <img src="graphics/climbing/Bills-Wall_Second_View.jpg" alt="Bill's Wall Image 1">
+        <img src="graphics/climbing/sunshine/Bills-Wall_Kissing_Cousins.jpg" alt="Bill's Wall Image 1">
         <figcaption>Bill's Wall, Second View. October 26, 2024.</figcaption>
       </figure>
       <figure>
-        <img src="graphics/climbing/Bills-Wall_Top_Out.jpg" alt="Bill's Wall Image 2">
+        <img src="graphics/climbing/sunshine/cooper_julia.jpg" alt="Bill's Wall Image 3">
+        <figcaption>Bill's Wall, Top Out. October 26, 2022024.</figcaption>
+      </figure>
+      <figure>
+        <img src="graphics/climbing/sunshine/selfie.jpg" alt="Bill's Wall Image 4">
         <figcaption>Bill's Wall, Top Out. October 26, 2022024.</figcaption>
       </figure>
     </div>
