update hard rock

--- a/climbing.html
+++ b/climbing.html
@@ -84,7 +84,7 @@
 
         <!-- Item 3 (Album Cover) -->
         <figure style="max-width:300px; text-align:center;" onclick="toggleGallery('hardRockGallery')">
-          <img src="graphics/climbing/Hard_rock_muffin.jpg" alt="Hard Rock" class="album-cover">
+          <img src="graphics/climbing/hard-rock/Hard_rock_muffin.jpg" alt="Hard Rock" class="album-cover">
           <figcaption style="margin-top:10px; font-size:16px; color:#555;">Hard Rock, American Fork, Tasty Muffins. September 6, 2024.</figcaption>
         </figure>
 
@@ -136,6 +136,33 @@
       <figure>
         <img src="graphics/climbing/sunshine/selfie.jpg" alt="Bill's Wall Image 4">
         <figcaption>Bill's Wall, Top Out. October 26, 2022024.</figcaption>
+      </figure>
+    </div>
+
+    <div class="hidden-gallery" id="hardRockGallery">
+      <figure>
+        <img src="graphics/climbing/hard-rock/Hard_rock_muffin.jpg">
+      </figure>
+      <figure>
+        <img src="graphics/climbing/hard-rock/crew.jpg">
+      </figure>
+      <figure>
+        <img src="graphics/climbing/hard-rock/croc_action_shot.JPG">
+      </figure>
+      <figure>
+        <img src="graphics/climbing/hard-rock/ike_wolf.jpg">
+      </figure>
+      <figure>
+        <img src="graphics/climbing/hard-rock/lovato.jpg">
+      </figure>
+      <figure>
+        <img src="graphics/climbing/hard-rock/lovato_flower.jpg">
+      </figure>
+      <figure>
+        <img src="graphics/climbing/hard-rock/sabey.jpg">
+      </figure>
+      <figure>
+        <img src="graphics/climbing/hard-rock/sabey_nate.jpg">
       </figure>
     </div>
 
