--- a/climbing.html
+++ b/climbing.html
@@ -90,14 +90,8 @@
 
         <!-- Item 4 (Album Cover) -->
         <figure style="max-width:300px; text-align:center;" onclick="toggleGallery('indianCreekGallery')">
-          <img src="graphics/climbing/Indian-creek_sparkling_gefilte_fish.jpg" alt="Indian Creek" class="album-cover">
+          <img src="graphics/climbing/indian-creek/Indian-creek_sparkling_gefilte_fish.jpg" alt="Indian Creek" class="album-cover">
           <figcaption style="margin-top:10px; font-size:16px; color:#555;">Indian Creek, Sparkling Gefilte Fish 5.10c, November 8, 2022.</figcaption>
-        </figure>
-
-        <!-- Item 5 (Album Cover) -->
-        <figure style="max-width:300px; text-align:center;" onclick="toggleGallery('lunarEclipseGallery')">
-          <img src="graphics/climbing/lunar_ecplise.jpg" alt="Lunar Eclipse" class="album-cover">
-          <figcaption style="margin-top:10px; font-size:16px; color:#555;">Indian Creek, Lunar Eclipse, November 8, 2022.</figcaption>
         </figure>
 
       </div>
@@ -163,6 +157,17 @@
       </figure>
       <figure>
         <img src="graphics/climbing/hard-rock/sabey_nate.jpg">
+      </figure>
+    </div>
+
+    <div class="hidden-gallery" id="indianCreekGallery">
+      <figure>
+        <img src="graphics/climbing/indian-creek/Indian-creek_sparkling_gefilte_fish.jpg" alt="Indian Creek Image 1">
+        <figcaption>Indian Creek, Sparkling Gefilte Fish 5.10c. November 8, 2022.</figcaption>
+      </figure>
+      <figure>
+        <img src="graphics/climbing/indian-creek/lunar_ecplise.jpg" alt="Indian Creek Image 2">
+        <figcaption>Indian Creek, Lunar Eclipse, November 8, 2022.</figcaption>
       </figure>
     </div>
 
