--- a/research.html
+++ b/research.html
@@ -29,5 +29,62 @@
     </table>
   </center>
 
+  <!-- Research Overview -->
+  <section style="margin: 20px;">
+    <h2 style="font-size:30px;">Overview</h2>
+    <p style="font-size:16px;">
+      <!-- Add a brief introduction about your research focus, areas of interest, and overarching goals. -->
+      <em> My research focuses on machine learning, optimization, and their applications in environmental science.</em>
+    </p>
+  </section>
+
+  <!-- Research Projects -->
+  <section style="margin: 20px;">
+    <h2 style="font-size:30px;">Research Projects</h2>
+    <ul style="font-size:16px; line-height:1.8;">
+      <!-- Add project titles and descriptions -->
+      <li>
+        <strong>Reduced Order Modeling for Plume Dynamics</strong><br>
+        <p style="margin-left:20px;"> Developing fast reduced order modelings for characterizing plume dynamics directly from video data. </p>
+      </li>
+      <li>
+        <strong>Joint SINDy</strong><br>
+        <p style="margin-left:20px;"> Developing a new model learning architecture inspired by the widely used (two-step) <i>Sparse Identification of Nonlinear Dynamics</i> (SINDy) that learns a model in scenarios of extremely scarce or noisy data measurements. </p>
+      </li>
+      <!-- <li>
+        <strong>Project 3: Title</strong><br>
+        <p style="margin-left:20px;">A brief description of the project, its goals, and any results or findings.</p>
+      </li> -->
+    </ul>
+  </section>
+
+  <!-- Publications -->
+  <section style="margin: 20px;">
+    <h2 style="font-size:30px;">Publications</h2>
+    <ul style="font-size:16px; line-height:1.8;">
+      <!-- Add a list of publications -->
+      <li>
+        <strong>Publication 1:</strong> Ike Griss Salas, Megan R. Ebers, Jake Stevens-Haas, and J. Nathan Kutz, Course graining and reeduced oder models for plume dynamics, Journal/Conference, Year.
+      </li>
+      <!-- <li>
+        <strong>Publication 2:</strong> Author(s), Title, Journal/Conference, Year.
+      </li>
+      <li>
+        <strong>Publication 3:</strong> Author(s), Title, Journal/Conference, Year.
+      </li>
+    </ul> -->
+  </section>
+
+  <!-- Contact Information -->
+  <section style="margin: 20px;">
+    <h2 style="font-size:30px;">Contact</h2>
+    <p style="font-size:16px;">
+      <!-- Add your preferred contact details -->
+      <!-- Email: <a href="mailto:your_email@example.com">your_email@example.com</a><br> -->
+      LinkedIn: <a href="linkedin.com/in/ike-griss-salas-46a32016a" target="_blank">linkedin.com/in/ike-griss-salas</a><br>
+      GitHub: <a href="https://github.com/MalachiteWind" target="_blank">https://github.com/MalachiteWind</a>
+    </p>
+  </section>
+
 </body>
 </html>
