add plumes preprint

--- a/research.html
+++ b/research.html
@@ -64,8 +64,12 @@
     <ul style="font-size:16px; line-height:1.8;">
       <!-- Add a list of publications -->
       <li>
-        <strong>Publication 1:</strong> Ike Griss Salas, Megan R. Ebers, Jake Stevens-Haas, and J. Nathan Kutz, Course graining and reeduced oder models for plume dynamics, Journal/Conference, Year.
+        <strong>Coarse Graining and Reduced Order Models for Plume Ejection Dynamics</strong><br>
+        Ike Griss Salas, Megan R. Ebers, Jake Stevens-Haas, J. Nathan Kutz<br>
+        <em>arXiv preprint arXiv:2503.04690 (2025)</em><br>
+        <a href="https://arxiv.org/abs/2503.04690" target="_blank" rel="noopener noreferrer">Read on arXiv</a>
       </li>
+      
       <!-- <li>
         <strong>Publication 2:</strong> Author(s), Title, Journal/Conference, Year.
       </li>
