feat: test spam blocker email

--- a/index.html
+++ b/index.html
@@ -19,20 +19,41 @@
   </div>
   </div>
 
-	<center><table width="80%" border="0" cellspacing="3" cellpadding="3">
-	<tr>
-
-		<td align="center" bgcolor="white">
-      <h1 style="font-size:50px; font-weight:normal;">Ike Griss Salas</h1>
-      <p style="font-size:20px;">Email: <a href="mailto:grisal@uw.edu">grisal@uw.edu</a><br>
-	  <!-- <a href="https://scholar.google.com/citations?user=-varfsgAAAAJ&hl=en">Google Scholar</a><br> -->
-	  github: <a href="https://github.com/malachitewind">Github</a>
-	  </p>
-
-   </td>
-	</tr>
-   </table></center>
-
+  <center>
+    <table width="80%" border="0" cellspacing="3" cellpadding="3">
+      <tr>
+        <td align="center" bgcolor="white">
+          <h1 style="font-size:50px; font-weight:normal;">Ike Griss Salas</h1>
+          
+          <p style="font-size:20px; margin-bottom: 10px;">
+            Email: 
+            <a id="email-link">ikegriss<b class="block-bots">[spam_blocker]</b>@uw.edu</a>
+          </p>
+  
+          <script>
+            // Populate the mailto link for the email address while hiding it from bots
+            (function () {
+              var user = "ikegriss";
+              var domain = "uw.edu";
+              var element = document.getElementById("email-link");
+              element.href = "mailto:" + user + "@" + domain;
+            })();
+          </script>
+          <p style="font-size:20px;">
+            GitHub: <a href="https://github.com/malachitewind" target="_blank" rel="noopener noreferrer">malachitewind</a>
+          </p>
+  
+          <!-- Optional: Add Google Scholar or other links below
+          <p style="font-size:20px;">
+            <a href="https://scholar.google.com/citations?user=-varfsgAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">Google Scholar</a>
+          </p>
+          -->
+          
+        </td>
+      </tr>
+    </table>
+  </center>
+  
 	<center><table width="80%" border="0" cellspacing="1" cellpadding="1">
 	<tr>
 	<td align="left" bgcolor="white" style="width:300px;">
