bug: fix nav bar centering

--- a/climbing.html
+++ b/climbing.html
@@ -43,11 +43,11 @@
 <body style="margin-top: 0px; width: 50%;">
 
   <div id="outer">
-    <div id="menu" style="width:80%; margin:auto;">
-      <ul style="list-style-type:none; padding:0; text-align:center;">
-        <li style="display:inline; margin:0 10px;"><a href="index.html">Home</a></li>
-        <li style="display:inline; margin:0 10px;"><a href="./research.html">Research</a></li>
-        <li style="display:inline; margin:0 10px;"><a href="./climbing.html" class="active">Climbing</a></li>
+    <div id="menu">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="./research.html">Research</a></li>
+        <li><a href="./climbing.html" class="active">Climbing</a></li>
       </ul>
     </div>
 
