--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body style="margin-top: 0px; width: 50%;">
 
    <div id="outer">
-   <div id="menu" style="width:80%; ">
+   <div id="menu">
     <!-- HINT: Set the class of any menu link below to "active" to make it appear active -->
     <ul>
       <li><a href="index.html" class="active">Home</a></li>
