--- a/research.html
+++ b/research.html
@@ -9,8 +9,7 @@
 <body style="margin-top: 0px; width: 50%;">
 
   <div id="outer">
-    <div id="menu" style="width:80%; ">
-      <!-- HINT: Set the class of any menu link below to "active" to make it appear active -->
+    <div id="menu">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="./research.html" class="active">Research</a></li>
