add vantage album

--- a/climbing.html
+++ b/climbing.html
@@ -24,9 +24,9 @@
           <td align="center" bgcolor="white">
             <h1 style="font-size:50px; font-weight:normal;">Climbing</h1>
             <p style="font-size:16px;">
-              Checkout my climbs <em> 
+              Some climbs I have done on <em> 
                 <a href="https://www.mountainproject.com/user/201838571/ike-griss-salas" target="_blank" rel="noopener noreferrer">
-                  Mountain Project
+                  Mountain Project.
                 </a>
               </em>
             </p>
@@ -37,9 +37,18 @@
 
     <div class="gallery-container">
       <h2 style="font-size:40px; font-weight:normal; margin-bottom:20px;">Gallery</h2>
+        <!-- <p style="font-size:16px; text-align:center;">
+          Some highlighted albums of my climbs.
+        </p> -->
 
       <!-- Gallery Section -->
       <div class="album-grid">
+
+        <!-- Vantage - Kate and Heidi -->
+        <figure class="album-item" onclick="toggleGallery('vantageHeidiKate')">
+          <img src="graphics/climbing/vantage_heidi_kate/group_sunshine.jpg" alt="Shangri-La">
+          <figcaption>Entrance to Sunshine Wall, Vantage. March 24, 2025.</figcaption>
+        </figure>
         
         <!-- ShangriLa -->
         <figure class="album-item" onclick="toggleGallery('shangriLaGallery')">
@@ -89,6 +98,32 @@
       </figure>
     </div>
 
+    <div class="hidden-gallery" id="vantageHeidiKate">
+      <figure>
+        <img src="graphics/climbing/vantage_heidi_kate/group_sunshine.jpg" alt="sunshine">
+      </figure>
+      <figure>
+        <img src="graphics/climbing/vantage_heidi_kate/kate_belay_ike.jpg" alt="kate_belay_ike">
+      </figure>
+      <figure>
+        <img src="graphics/climbing/vantage_heidi_kate/kate_belay_heidi.jpg" alt="kate_belay_heidi">
+      </figure>
+      <figure>
+        <img src="graphics/climbing/vantage_heidi_kate/group_pitch1.jpg" alt="group_pitch1">
+      </figure>
+      <figure>
+        <img src="graphics/climbing/vantage_heidi_kate/beloggles.jpg" alt="beloggles">
+      </figure>
+      <figure>
+        <img src="graphics/climbing/vantage_heidi_kate/kate_heidi.jpg" alt="kate_heidi">
+      </figure>
+      <figure>
+        <img src="graphics/climbing/vantage_heidi_kate/good_doggo.jpg" alt="good_doggo">
+      </figure>
+      <figure>
+        <img src="graphics/climbing/vantage_heidi_kate/kate_belay.jpg" alt="kate_belay">
+      </figure>
+    </div>
     <div class="hidden-gallery" id="billsWallGallery">
       <figure>
         <img src="graphics/climbing/sunshine/Bills-Wall_Kissing_Cousins.jpg" alt="Bill's Wall Image 1">
