vantage cooper julia

--- a/climbing.html
+++ b/climbing.html
@@ -44,9 +44,15 @@
       <!-- Gallery Section -->
       <div class="album-grid">
 
+        <!-- Vantage - Cooper and Julia -->
+         <figure class="album-item" onclick="toggleGallery('vantageCooperJulia')">
+          <img src="graphics/climbing/vant_coop_julia/ike.jpg" alt="vantage_cj">
+          <figcaption>I don't remember right now, Vantage. March 26, 2025</figcaption>
+         </figure>
+
         <!-- Vantage - Kate and Heidi -->
         <figure class="album-item" onclick="toggleGallery('vantageHeidiKate')">
-          <img src="graphics/climbing/vantage_heidi_kate/group_sunshine.jpg" alt="Shangri-La">
+          <img src="graphics/climbing/vantage_heidi_kate/group_sunshine.jpg" alt="vantage_hk">
           <figcaption>Entrance to Sunshine Wall, Vantage. March 24, 2025.</figcaption>
         </figure>
         
@@ -78,7 +84,18 @@
     </div>
 
     <!-- Hidden Galleries for Each Album -->
-    
+    <div class="hidden-gallery", id="vantageCooperJulia">
+      <figure>
+        <img src="graphics/climbing/vant_coop_julia/ike.jpg" alt="ike">
+      </figure>
+      <figure>
+        <img src="graphics/climbing/vant_coop_julia/juila.jpg" alt="julia">
+      </figure>
+      <figure>
+        <img src="graphics/climbing/vant_coop_julia/cooper.jpg" alt="cooper">
+      </figure>
+    </div>
+
     <div class="hidden-gallery" id="shangriLaGallery">
       <figure>
         <img src="graphics/climbing/Shangri-La/Shangri-La_Crouching_Tiger.jpg" alt="Shangri-La Image 1">
