fix:remove fixed width

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <link rel="stylesheet" href="ike_styles.css" type="text/css" media="all">
 </head>
-<body style="margin-top: 0px; width: 50%;">
+<body style="margin-top: 0px;">
 
-   <div id="outer">
+<div id="outer">
    <div id="menu">
     <!-- HINT: Set the class of any menu link below to "active" to make it appear active -->
     <ul>
