--- a/research.html
+++ b/research.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <link rel="stylesheet" href="ike_styles.css" type="text/css" media="all">
 </head>
-<body style="margin-top: 0px; width: 50%;">
+<body style="margin-top: 0px;">
 
   <div id="outer">
     <div id="menu">
