test: reduce cover photo res

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	<center><table width="80%" border="0" cellspacing="1" cellpadding="1">
 	<tr>
 	<td align="left" bgcolor="white" style="width:300px;">
-	  <img src="./graphics/department_2.jpeg" style="width: 100%;">
+	  <img src="./graphics/department_2_copy.jpg" style="width: 100%;">
     </td>
 	<td align="left" bgcolor="white">
 		<p style="padding-left:30px;">
