test lazy loading

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
   
 	<center><table width="80%" border="0" cellspacing="1" cellpadding="1">
 	<tr>
-	<td align="left" bgcolor="white" style="width:300px;">
-	  <img src="./graphics/department_2_copy.jpg" style="width: 100%;">
+	<td align="left" bgcolor="white" style="width:400px;">
+	  <img src="./graphics/department_2_cropped.jpg" style="width: 100%;" loading="lazy" alt="Department photo">
     </td>
 	<td align="left" bgcolor="white">
 		<p style="padding-left:30px;">
