--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	<td align="left" bgcolor="white">
 		<p style="padding-left:30px;">
 
-    I'm a Ph.D. Candidate in <a href="https://amath.washington.edu/">Applied Mathematics</a> at the University of Washington, advised by <a href="https://faculty.washington.edu/kutz/">Nathan Kutz</a>. I work on creating reduced order models for characterizing plume dynamics. As well as optimization methods for model discovery from sparse data observations. Test.
+    I'm a Ph.D. Candidate in <a href="https://amath.washington.edu/">Applied Mathematics</a> at the University of Washington, advised by <a href="https://faculty.washington.edu/kutz/">Nathan Kutz</a>. I work on creating reduced order models for characterizing plume dynamics. As well as optimization methods for model discovery from sparse data observations. Test2.
 		</p>
     </td>
 	</tr>
