--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a id="email-link">grisal@uw.edu</a>
           </p>
           
-          <script>
+          <!-- <script>
             // Sets the mailto link without exposing it in the HTML
             (function () {
               const user = "grisal";
@@ -40,7 +40,8 @@
               el.href = "mailto:" + email;
               el.textContent = email;
             })();
-          </script>
+          </script> -->
+          
           <p style="font-size:20px;">
             GitHub: <a href="https://github.com/malachitewind" target="_blank" rel="noopener noreferrer">malachitewind</a>
           </p>
@@ -61,11 +62,24 @@
 	<td align="left" bgcolor="white" style="width:400px;">
 	  <img src="./graphics/department_2_cropped_reduce.jpg" style="width: 100%;" loading="lazy" alt="Department photo">
     </td>
-	<td align="left" bgcolor="white">
+	<td align="left" bgcolor="white" valign="top">
 		<p style="padding-left:30px;">
 
     I'm a Ph.D. Candidate in <a href="https://amath.washington.edu/">Applied Mathematics</a> at the University of Washington, advised by <a href="https://faculty.washington.edu/kutz/">Nathan Kutz</a>. I work on creating reduced order models for characterizing plume dynamics. As well as optimization methods for model discovery from sparse data observations. Test2.
 		</p>
+
+    <p style="padding-left:30px; margin-top:50px;">
+        Department of Applied Mathematics
+        <br>
+        University of Washington
+        <br>
+        Lewis Hall 222
+        <br>
+        Seattle, WA 98195
+    </p>
     </td>
 	</tr>
-   </table></center
+   </table>
+  </center>
+
+
