--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	<td align="left" bgcolor="white" valign="top">
 		<p style="padding-left:30px;">
 
-    I'm a Ph.D. Candidate in <a href="https://amath.washington.edu/">Applied Mathematics</a> at the University of Washington, advised by <a href="https://faculty.washington.edu/kutz/">Nathan Kutz</a>. I work on creating reduced order models for characterizing plume dynamics. As well as optimization methods for model discovery from sparse data observations. Test2.
+    I'm a Ph.D. Candidate in <a href="https://amath.washington.edu/">Applied Mathematics</a> at the University of Washington, advised by <a href="https://faculty.washington.edu/kutz/">Nathan Kutz</a>. I work on creating reduced order models for characterizing plume dynamics. As well as optimization methods for model discovery from sparse data observations.
 		</p>
 
     <p style="padding-left:30px; margin-top:50px;">
