fix: add script back

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a id="email-link">grisal@uw.edu</a>
           </p>
           
-          <!-- <script>
+          <script>
             // Sets the mailto link without exposing it in the HTML
             (function () {
               const user = "grisal";
@@ -40,7 +40,7 @@
               el.href = "mailto:" + email;
               el.textContent = email;
             })();
-          </script> -->
+          </script>
           
           <p style="font-size:20px;">
             GitHub: <a href="https://github.com/malachitewind" target="_blank" rel="noopener noreferrer">malachitewind</a>
